--- a/assets/scss/components/_carrousel.scss
+++ b/assets/scss/components/_carrousel.scss
@@ -18,6 +18,18 @@
     height: 350px;
   }
 
+  & .card {
+    min-height: 300px;
+
+    @include from(821px) {
+      height: 350px;
+    }
+
+    @include from(lg) {
+      height: 400px;
+    }
+  }
+
   & .slide-container {
     justify-content: space-evenly;
     position: relative;
